--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <h1>Home Page</h1>
   <h2>This is my project</h2>
   <h2>After release1 main branch changed</h2>
+  <h2>After deleting feature1</h2>
 </body>
 </html>
