--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <h2>After release1 main branch changed</h2>
   <h2>After deleting feature1</h2>
   <h3>about to release 3</h3>
+  <h2>After release1 main branch changed</h2>
 </body>
 </html>
